# zeep

./: README.md  test_generator.sh
examples/aacc/: customer.rs
examples/aic/: aic.rs
examples/claim_service/: claim_service.rs
examples/exchange/: services.rs
examples/hello/: hello.rs  main.rs
examples/temperature/: tempconverter.rs
zeep/: Cargo.toml
zeep-lib/: Cargo.toml
zeep-lib/src/: lib.rs  reader.rs
zeep-lib/src/model/: doc.rs  field.rs
zeep-lib/src/model/soap/: service.rs
zeep-lib/src/model/soap/binding/: mod.rs
zeep-lib/src/model/structures/: complex.rs  writer.rs
zeep-lib/src/yaserde_tests/: mod.rs
zeep-lib/test-data/: claim_service.wsdl  headers_in_same_message.wsdl  multi_namespace.wsdl
