[package]
name = "zeep"
version = "0.2.3"
authors = ["mibes <mibes@avaya.com>"]
edition = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.8"
clap = "4.5.54"
zeep-lib = { path = "../zeep-lib" }
